Fixed bug #50657 (copy() with an empty (zero-byte) HTTP source succeeds but returns false).